SGD8-2526: Fix overflow on timeslot (#468)
* Fix linting error

* SGD8-2526: Fix overflow on timeslot

--- a/components/31-molecules/breadcrumbs/_breadcrumbs.scss
+++ b/components/31-molecules/breadcrumbs/_breadcrumbs.scss
@@ -69,7 +69,7 @@
       padding: 0 .35rem;
       border-color: transparent;
       outline: 2px solid currentColor;
-      line-height: 0.95rem;
+      line-height: .95rem;
 
       &:hover,
       &:focus {
@@ -83,7 +83,7 @@
       }
     }
 
-    &:after {
+    &::after {
       line-height: inherit;
     }
   }
